[package]
name = "dynamic_join_array"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]
authors = ["dbydd <dbydd@outlook.com>"]
license = "gpl-3.0-or-later"
description = "A dynamic array that can be used to join futures for single thread async programming"
repository = "https://github.com/dbydd/dynamic_join_array"
categories = ["concurrency"]
keywords = ["futures","dynamic","join","no_std"]

[dependencies]
futures = {version="0.3.31",default-features=false, features=["async-await","alloc"]}

[dev-dependencies]
async-lock = {version = "3.4.0",default-features =  false}