[package]
name = "dynamic_join_array"
version = "0.1.2"
edition = "2021"
publish = ["crates-io"]
authors = ["dbydd <dbydd@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A dynamic array that can be used to join futures for single thread async programming"
repository = "https://github.com/dbydd/dynamic_join_array"
categories = ["concurrency"]
keywords = ["futures","dynamic","join","no_std"]

[dependencies]
futures = {version="0.3.31",default-features=false, features=["async-await","alloc"]}
async-lock = {version = "3.4.0",default-features =  false}

[dev-dependencies]
tokio = {version="1.23.0",default-features=false, features=["full"]}